# Cavvy

./: .gitattributes  .verinfo  Cargo.toml  README.md  ROADMAP.md  build.rs  commit_msg.txt  test_input.eol  test_output.txt
.github/workflows/: nb.yml
examples/: test_0_3_4_features.eol  test_0_4_3_features.cay  test_all_features.eol  test_arith_add.cay  test_arith_div.cay  test_arith_mod.cay  test_arith_mul.cay  test_arith_sub.cay  test_arithmetic_edge_cases.eol  test_array.eol  test_array_033.eol  test_array_1d.cay  test_array_2d.cay  test_array_copy.cay  test_array_find_max.cay  test_array_init.eol  test_array_init_inline.cay  test_array_initializer.eol  test_array_length.eol  test_array_loop.eol  test_array_reverse.cay  test_array_simple.eol  test_array_sum.cay  test_array_types.eol  test_assign_add.cay  test_assign_div.cay  test_assign_mod.cay  test_assign_mul.cay  test_assign_sub.cay  test_assignment_operators.eol  test_auto_inference.cay  test_basic_bool.cay  test_basic_char.cay  test_basic_double.cay  test_basic_float.cay  test_basic_int.cay  test_basic_long.cay  test_basic_string.cay  test_binary_search.cay  test_bitwise_and.cay  (+123 more)
src/: ast.rs  types.rs
src/codegen/: context.rs  expressions.rs  generator.rs  runtime.rs  statements.rs  types.rs
src/codegen/expressions/: array.rs  assignment.rs  binary.rs  builtin.rs  call.rs  cast.rs  identifier.rs  instanceof.rs  lambda.rs  literal.rs  main.rs  (+7 more)
src/lexer/: mod.rs
src/parser/: classes.rs  expressions.rs  statements.rs  types.rs
src/semantic/: expr_inference.rs  mod.rs
tests/: integration_tests.rs
(+17 files in other folders)
