[package]
name = "eol"
version = "0.3.3"
edition = "2024"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
logos = "0.15"

[[bin]]
name = "eolc"
path = "src/bin/eolc.rs"

[[bin]]
name = "eolll"
path = "src/bin/eolll.rs"

[[bin]]
name = "ir2exe"
path = "src/bin/ir2exe.rs"

[[bin]]
name = "eol-check"
path = "src/bin/eol-check.rs"
